fix URL(String) deprecation) warning