@@ -10,6 +10,8 @@ import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 import javax.net.ssl.HttpsURLConnection;
@@ -88,7 +90,13 @@ public class EnvisionConnector extends HttpConnector {
 
     DataOutputStream printout;
     InputStreamReader input = null;
-    URL url = new URL(conn.getUrl());
+    URL url;
+    try {
+      URI uri = new URI(conn.getUrl());
+      url = uri.toURL();
+    } catch (URISyntaxException uriEx) {
+      throw new IOException(uriEx);
+    }
 
     urlConn = (HttpURLConnection) url.openConnection();
     if (factory != null && urlConn instanceof HttpsURLConnection) {
@@ -206,7 +214,13 @@ public class EnvisionConnector extends HttpConnector {
       HttpURLConnection urlConn;
       DataOutputStream printout;
       InputStreamReader input = null;
-      URL url = new URL(conn.getUrl());
+      URL url;
+      try {
+        URI uri = new URI(conn.getUrl());
+        url = uri.toURL();
+      } catch (URISyntaxException uriEx) {
+        throw new IOException(uriEx);
+      }
 
       urlConn = (HttpURLConnection) url.openConnection();
       if (factory != null && urlConn instanceof HttpsURLConnection) {
