@@ -10,6 +10,8 @@ import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.security.KeyStore;
@@ -165,7 +167,13 @@ public class HttpConnector extends Connector {
       HttpURLConnection urlConn;
       DataOutputStream printout;
       InputStreamReader input = null;
-      URL url = new URL(conn.getUrl());
+      URL url;
+      try {
+        URI uri = new URI(conn.getUrl());
+        url = uri.toURL();
+      } catch (URISyntaxException uriEx) {
+        throw new IOException(uriEx);
+      }
 
       urlConn = (HttpURLConnection) url.openConnection();
       if (factory != null && urlConn instanceof HttpsURLConnection) {
