@@ -11,6 +11,8 @@ import java.io.PrintWriter;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
@@ -83,7 +85,13 @@ public class HttpRawConnector extends Connector {
       HttpURLConnection urlConn;
       DataOutputStream printout;
       InputStreamReader input = null;
-      URL url = new URL(conn.getUrl());
+      URL url;
+      try {
+        URI uri = new URI(conn.getUrl());
+        url = uri.toURL();
+      } catch (URISyntaxException uriEx) {
+        throw new IOException(uriEx);
+      }
 
       urlConn = (HttpURLConnection) url.openConnection();
       if (factory != null && urlConn instanceof HttpsURLConnection) {
