@@ -11,6 +11,8 @@ import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.List;
@@ -75,7 +77,13 @@ public class SCSoapConnector extends HttpConnector {
       URLConnection urlConn;
       DataOutputStream printout;
       InputStreamReader input = null;
-      URL url = new URL(conn.getUrl());
+      URL url;
+      try {
+        URI uri = new URI(conn.getUrl());
+        url = uri.toURL();
+      } catch (URISyntaxException uriEx) {
+        throw new IOException(uriEx);
+      }
       urlConn = url.openConnection();
       if (factory != null && urlConn instanceof HttpsURLConnection) {
         if (debug) {
@@ -168,7 +176,9 @@ public class SCSoapConnector extends HttpConnector {
       URLConnection urlConn;
       DataOutputStream printout;
       InputStreamReader input = null;
-      URL url = new URL(this.url);
+      URL url;
+      URI uri = new URI(this.getUrl());
+      url = uri.toURL();
       urlConn = url.openConnection();
       if (factory != null && urlConn instanceof HttpsURLConnection) {
         ((HttpsURLConnection) urlConn).setSSLSocketFactory(factory);
